[package]
name = "auth_me"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
cookie = "0.18.1"
csrf = "0.5.0"
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "set-header", "set-status", "trace", "validate-request",] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
